--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@splinetool/runtime": "^1.9.67",
     "@tabler/icons-react": "^3.30.0",
     "@types/three": "^0.173.0",
+    "BotAvatar": "link:@/components/BotAvatar",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -70,6 +71,7 @@
     "npm": "^11.1.0",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
+    "react-avatar": "^5.0.3",
     "react-canvas-confetti": "^2.0.7",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
