--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.11.1",
+    "@clerk/clerk-react": "^5.23.0",
+    "@clerk/nextjs": "^6.11.3",
     "@google/generative-ai": "^0.21.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.10.0",
